--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A simple calendar with nice design for remarking a date."
+    />
+    <meta
+      name="keywords"
+      content="Calendar Remark, Calendar, Remark, Lunar, Year Progress"
+    />
     <title>Calendar Remark</title>
   </head>
   <body>
